bugfix for DAY6
- fix ./fe *.html scripts

--- a/DAY5/noderoutingapp/public/fe/create.html
+++ b/DAY5/noderoutingapp/public/fe/create.html
@@ -7,6 +7,8 @@
         게시여부: <select id="display_yn">
             <option value="Y">게시</option>
             <option value="N">게시안함</option>
+        </select>
+        <br>
         <hr>
         <input type="button" value="등록" id='btnSave'/>
 
